--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-callback"
-              >+11 (000) 111-11-11</a
-            >
+            <a href="tel:+110001111111" class="address-callback">
+              +11 (000) 111-11-11
+            </a>
           </li>
         </ul>
       </address>
@@ -49,7 +49,7 @@
         <ul>
           <li>
             <h3 class="strategy">Strategy</h3>
-            <p class="strategy-p">
+            <p class="strategy-s">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -63,14 +63,14 @@
           </li>
           <li>
             <h3 class="strategy">Diligence</h3>
-            <p class="strategy-p">
+            <p class="strategy-d">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="strategy">Technologies</h3>
-            <p class="strategy-p">
+            <p class="strategy-t">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -79,7 +79,7 @@
       </section>
       <!--Our team-->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="workers">Our Team</h2>
         <ul>
           <li>
             <img
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="./images/icons/img-1.jpg"
+              src="./images/icons/img-2.jpg"
               width="264"
               alt="Icons Tom Ford"
             />
@@ -101,7 +101,7 @@
           </li>
           <li>
             <img
-              src="./images/icons/img-2.jpg"
+              src="./images/icons/img-1.jpg"
               width="264"
               alt="Icons Camila Garcia"
             />
@@ -157,7 +157,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="title">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
